--- a/fishingstories/templates/fishingstories/fish/fish-edit.html
+++ b/fishingstories/templates/fishingstories/fish/fish-edit.html
@@ -2,37 +2,65 @@
 
 
 {% block content %}
-    <h1>Edit Angler - {{ form.name.data }}</h1>
-    {{ form.hidden_tag() }}
-    <form method="" action="">
+    <h1>Edit Fish</h1>
+    <form action="" method="patch"  novalidate>
+        {{ form.hidden_tag() }}
         <table>
             <tr>
-                <td>{{ form.name.label }}</td>
-                <td>{{ form.name() }}</td>
-                <td><a href="{{ url_for('angler.bait_edit', bait_id=form.bait_id) }}">EDIT</a></td>
-                {% for error in form.name.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
+                <td>{{ form.species.label }}</td>
+                <td>{{ form.species() }}</td>
+                <td>{% for error in form.species.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </td>
             </tr>
             <tr>
-                <td></td>
-                <td>{{ form.artificial() }} {{ form.artificial.label }}</td>
-                {% for error in form.artificial.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
+                <td>{{ form.date_time.label }}</td>
+                <td>{{ form.date_time() }}</td>
             </tr>
             <tr>
-                <td>{{ form.size.label }}</td>
-                <td>{{ form.size() }}</td>
+                <td>{{ form.weight.label }}</td>
+                <td>{{ form.weight() }}</td>
             </tr>
             <tr>
-                <td>{{ form.color.label }}</td>
-                <td>{{ form.color() }}</td>
+                <td>{{ form.length.label }}</td>
+                <td>{{ form.length() }}</td>
+            </tr>
+            <tr>
+                <td>{{ form.fishing_spot.label }}</td>
+                <td>{{ form.fishing_spot() }}</td>
+                <td><a href="{{ url_for('angler.fish_menu', angler_id=angler_id) }}">Create New Spot</a></td>
+                <td>
+                    {% for error in form.fishing_spot.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </td>
+            </tr>
+            <tr>
+                <td>{{ form.bait.label }}</td>
+                <td>{{ form.bait() }}</td>
+                <td><a href="{{ url_for('angler.bait_create') }}">Create New Bait</a></td>
+                <td>
+                    {% for error in form.bait.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </td>
+            </tr>
+            <tr>
+                <td>{{ form.gear.label }}</td>
+                <td>{{ form.gear() }} (Optional) </td>
+                <td><a href="{{ url_for('angler.bait_create') }}">Create Gear</a></td>
+                <td>
+                    {% for error in form.gear.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </td>
             </tr>
             <tr>
                 <td>{{ form.description.label }}</td>
                 <td>{{ form.description() }}</td>
             </tr>
+            
             <tr>
                 <td></td>
                 <td>{{ form.submit() }}</td>
@@ -42,16 +70,16 @@
     <script>
         $(document).ready(function () {
             $('form').submit(function (e) {
-                let url = "{{ url_for('admin.angler_edit', angler_id=form.angler_id.data) }}";
+                let url = "{{ url_for('fish.fish', angler_id=angler_id, fish_id=fish_id) }}";
                 $.ajax({
                     type: "PATCH",
                     url: url,
                     data: $('form').serialize(),
                     success: function (data) {
-                        window.location.href = "{{ url_for('admin.angler', angler_id=form.angler_id.data) }}";
+                        window.location.href = "{{ url_for('fish.fish', angler_id=angler_id, fish_id=fish_id) }}";
                     },
                     error: function (data) {
-                        window.location.href = "{{ url_for('admin.angler', angler_id=form.angler_id.data) }}";
+                        window.location.href = "{{ url_for('fish.fish', angler_id=angler_id, fish_id=fish_id) }}";
                     }
                 });
                 e.preventDefault();
