--- a/fishingstories/templates/fishingstories/index.html
+++ b/fishingstories/templates/fishingstories/index.html
@@ -7,13 +7,16 @@
         <a href="{{ url_for('fish.fish_menu', angler_id=angler_id) }}">my fish</a>
     </div>
     <div>
-        <a href="{{ url_for('angler.angler_spots_menu', angler_id=angler_id) }}">fishing spots</a>
+        <a href="{{ url_for('fishing_spots.angler_spots_menu', angler_id=angler_id) }}">fishing spots</a>
     </div>
     <div>
-        <a href="{{ url_for('angler.baits_menu') }}">baits</a>
+        <a href="{{ url_for('baits.baits_menu', angler_id=angler_id) }}">baits</a>
     </div>
     <div>
-        <a href="{{ url_for('angler.gear_menu') }}">gear</a>
+        <a href="{{ url_for('gear.gear_menu', angler_id=angler_id) }}">gear</a>
+    </div>
+    <div>
+        <a href="{{ url_for('statistics.statistics_menu', angler_id=angler_id) }}">my stats</a>
     </div>
     <div></div>
     <div></div>
