--- a/fishingstories/templates/fishingstories/gear/gear-edit.html
+++ b/fishingstories/templates/fishingstories/gear/gear-edit.html
@@ -2,57 +2,54 @@
 
 
 {% block content %}
-    <h1>Edit Bait</h1>
-    <a href="{{ url_for('bait.bait', angler_id=angler_id, bait_id=bait_id) }}">Return to Bait</a>
+    <h1>Edit Gear Combos</h1>
+    <a href="{{ url_for('gear.my_gear', angler_id=angler_id, gear_id=gear_id) }}">Return to Gear</a>
     <div> </div>
     <form method="" action="">
         {{ form.hidden_tag() }}
         <table>
             <tr>
-                <td>{{ form.name.label }}</td>
-                <td>{{ form.name() }}</td>
-                {% for error in form.name.errors %}
+                <td>{{ form.rod.label }}</td>
+                <td>{{ form.rod() }}</td>
+                {% for error in form.rod.errors %}
                 <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
             </tr>
             <tr>
-                <td></td>
-                <td>{{ form.artificial() }} {{ form.artificial.label }}</td>
-                {% for error in form.artificial.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
+                <td>{{ form.reel.label }}</td>
+                <td>{{ form.reel() }}</td>
             </tr>
             <tr>
-                <td>{{ form.size.label }}</td>
-                <td>{{ form.size() }}</td>
+                <td>{{ form.line.label }}</td>
+                <td>{{ form.line() }}</td>
             </tr>
             <tr>
-                <td>{{ form.color.label }}</td>
-                <td>{{ form.color() }}</td>
+                <td>{{ form.leader.label }}</td>
+                <td>{{ form.leader() }}</td>
             </tr>
             <tr>
-                <td>{{ form.description.label }}</td>
-                <td>{{ form.description() }}</td>
+                <td>{{ form.hook.label }}</td>
+                <td>{{ form.hook() }}</td>
             </tr>
             <tr>
                 <td></td>
-                <td>{{ form.submit() }}</td>
+                <td>{{ form.submit(value='Edit Gear') }}</td>
             </tr>
         </table>
     </form>
     <script>
         $(document).ready(function () {
             $('form').submit(function (e) {
-                let url = "{{ url_for('bait.bait_edit', angler_id=angler_id, bait_id=bait_id) }}";
+                let url = "{{ url_for('gear.gear_edit', angler_id=angler_id, gear_id=gear_id) }}";
                 $.ajax({
                     type: "PATCH",
                     url: url,
                     data: $('form').serialize(),
                     success: function (data) {
-                        window.location.href = "{{ url_for('bait.bait', angler_id=angler_id, bait_id=bait_id) }}";
+                        window.location.href = "{{ url_for('gear.my_gear', angler_id=angler_id, gear_id=gear_id) }}";
                     },
                     error: function (data) {
-                        window.location.href = "{{ url_for('bait.bait', angler_id=angler_id, bait_id=bait_id) }}";
+                        window.location.href = "{{ url_for('gear.my_gear', angler_id=angler_id, gear_id=gear_id) }}";
                     }
                 });
                 e.preventDefault();
