--- a/fishingstories/templates/fishingstories/index.html
+++ b/fishingstories/templates/fishingstories/index.html
@@ -10,7 +10,7 @@
         <a href="{{ url_for('fishing_spots.angler_spots_menu', angler_id=angler_id) }}">fishing spots</a>
     </div>
     <div>
-        <a href="{{ url_for('baits.baits_menu', angler_id=angler_id) }}">baits</a>
+        <a href="{{ url_for('bait.baits_menu', angler_id=angler_id) }}">baits</a>
     </div>
     <div>
         <a href="{{ url_for('gear.gear_menu', angler_id=angler_id) }}">gear</a>
