--- a/fishingstories/templates/fishing_spots/angler-spots.html
+++ b/fishingstories/templates/fishing_spots/angler-spots.html
@@ -14,7 +14,7 @@
         <tbody>
             {% for spot in fishing_spots %}
             <tr>
-                <td><a href="{{ url_for('fishing_spots.spot', spot_id=spot.id) }}">{{ spot.name }}</a></td>
+                <td><a href="{{ url_for('fishing_spots.fishing_spot', angler_id=angler_id, spot_id=spot.id) }}">{{ spot.name }}</a></td>
                 <td>{{ spot.nickname }}</td>
                 <td>{{ spot.global_position.latitude }}</td>
                 <td>{{ spot.global_position.longitude }}</td>
