--- a/fishingstories/templates/fishing_spots/spot-view.html
+++ b/fishingstories/templates/fishing_spots/spot-view.html
@@ -3,6 +3,37 @@
 
 {% block content %}
     <h1>{{ spot_name }}</h1>
+    <table class="view-only-form">
+        <tr>
+            <td>{{ form.name.label }}</td>
+            <td>{{ form.name() }}</td>
+            <td><button><a class="button-anchor" href="{{ map_url }}" target="_blank">View</a></button></td>
+        </tr>
+        <tr>
+           <td>{{ form.nickname.label }}</td>
+           <td>{{ form.nickname() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.latitude.label }}</td>
+            <td>{{ form.latitude() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.longitude.label }}</td>
+            <td>{{ form.longitude() }}</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>{{ form.is_public.label }} {{ form.is_public() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.description.label }}</td>
+            <td>{{ form.description() }}</td>
+        </tr>
+    </table>
+    
+    
+    
+    
     <h3>{{ tide_currents.coordinates.latitude }} N, {{ tide_currents.coordinates.longitude }} W</h3>
     <h3>Sun Rise: {{ tide_currents.sun.rise_time }} Sun Set: {{ tide_currents.sun.set_time }} </h3>
     <h3>Moon Rise: {{ tide_currents.moon.rise_time }} Moon Set: {{ tide_currents.moon.set_time }} {{ tide_currents.moon.phase }}</h3>
@@ -31,36 +62,5 @@
         {% endfor %}
         </tbody>
     </table>
-    <table>
-        <thead>
-            <th>Date</th>
-            <th>Swell Height</th>
-            <th>Swell Direction</th>
-            <th>Wave Height</th>
-            <th>Wave Period</th>
-            <th>Wind Speed</th>
-            <th>Wind Direction</th>
-            <th>Weather</th>
-            <th>Air Temp</th>
-            <th>Water Temp</th>
-        </thead>
-        <tbody>
-        {% for condition in weather %}
-            <tr>
-                <td>{{ condition.date_time }}</td>
-                <td>{{ condition.swell_height }}</td>
-                <td>{{ condition.swell_direction }}</td>
-                <td>{{ condition.wave_height }}</td>
-                <td>{{ condition.wave_period }}</td>
-                <td>{{ condition.wind_speed }}</td>
-                <td>{{ condition.wind_direction }}</td>
-                <td>{{ condition.weather_state }}</td>
-                <td>{{ condition.temperature }}</td>
-                <td>{{ condition.wind_chill }}</td>
-                <td>{{ condition.water_temperature }} {{ condition.water_temp_units }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <img src="{{ spot_name }}.jpg" alt="image {{ spot_name }}"/>
+
 {% endblock %}
