--- a/fishingstories/templates/fishingstories/index.html
+++ b/fishingstories/templates/fishingstories/index.html
@@ -16,7 +16,7 @@
         <a href="{{ url_for('gear.gear_menu', angler_id=angler_id) }}">gear</a>
     </div>
     <div>
-        <a href="{{ url_for('statistics.statistics_menu', angler_id=angler_id) }}">my stats</a>
+        <a href="{{ url_for('statistics.statistics', angler_id=angler_id) }}">my stats</a>
     </div>
     <div></div>
     <div></div>
