--- a/fishingstories/templates/fishingstories/index.html
+++ b/fishingstories/templates/fishingstories/index.html
@@ -18,8 +18,9 @@
     <div>
         <a href="{{ url_for('statistics.statistics', angler_id=angler_id) }}">my stats</a>
     </div>
-    <div></div>
-    <div></div>
+    <div>
+        <a href="{{ url_for('angler.manage_account', angler_id=angler_id) }}">manage account</a>
+    </div>
     {% endif %}
 {% endblock %}
 
