--- a/fishingstories/templates/fishingstories/users/password-edit.html
+++ b/fishingstories/templates/fishingstories/users/password-edit.html
@@ -28,7 +28,7 @@
                     {% for error in form.password.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
-                </td>
+                </td><td>Password must begin with a letter.  It must contain 1 capital and 1 lower-case letter, a number, and a special character</td>
             </tr>
             <tr>
                 <td>{{ form.password_repeat.label }}</td>
