--- a/fishingstories/templates/auth/register.html
+++ b/fishingstories/templates/auth/register.html
@@ -25,13 +25,27 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
+        <p style="color:red;">Password must begin with a letter.  It must contain 1 capital and 1 lower-case letter, a number, and a special character.</p>
         <p>
             {{ form.account_types.label }}<br>
             {{ form.account_types(size=1) }}
+        </p>
+        <p>
+            {{ form.email.label }}<br>
+            {{ form.email() }}
+            {% for error in form.email.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.email_repeat.label }}<br>
+            {{ form.email_repeat() }}
+            {% for error in form.email_repeat.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
         </p>
         <p>{{ form.submit() }}</p>
     </form>
     <div><div>
     <hr>
-    <a href="{{ url_for('register') }}">Not Registered?</a>
 {% endblock %}
