--- a/fishingstories_admin/templates/admin/index.html
+++ b/fishingstories_admin/templates/admin/index.html
@@ -23,5 +23,8 @@
     <div>
         <a href="{{ url_for('admin.statistics') }}">statistics</a>
     </div>
+    <div>
+        <a href="{{ url_for('admin.change_password') }}">change password</a>
+    </div>
 {% endblock %}
 
