--- a/fishingstories_admin/templates/fishingstories_admin/baits.html
+++ b/fishingstories_admin/templates/fishingstories_admin/baits.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>Baits</h1>
-    <table>
+    <table class="data-display-table">
         <thead>
             <th>Name</th>
             <th>Artificial</th>
