--- a/fishingstories_admin/templates/admin/index.html
+++ b/fishingstories_admin/templates/admin/index.html
@@ -15,6 +15,18 @@
         <a href="{{ url_for('admin.manage_anglers') }}">manage anglers</a>
     </div>
     <div>
+        <a href="{{ url_for('admin.users') }}">view users</a>
+    </div>
+    <div>
+        <a href="{{ url_for('admin.baits') }}">view baits</a>
+    </div>
+    <div>
+        <a href="{{ url_for('admin.gear') }}">view gear</a>
+    </div>
+    <div>
+        <a href="{{ url_for('admin.spots') }}">view fishing spots</a>
+    </div>
+    <div>
         <a href="{{ url_for('admin.load_current_stations') }}">load current stations</a>
     </div>
     <div>
