--- a/fishingstories_admin/templates/fishingstories_admin/gear.html
+++ b/fishingstories_admin/templates/fishingstories_admin/gear.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>Gear Combos</h1>
-    <table>
+    <table class="data-display-table">
         <thead>
             <th>Rod</th>
             <th>Reel</th>
