--- a/src/static/base.css
+++ b/src/static/base.css
@@ -106,7 +106,7 @@ section[class="left-top"]>div {
     text-align: center;
 }
 
-section[class="left-bottom"]>a {
+section[class="left-bottom"] a {
     color:rgb(240, 140, 10);
 }
 
